# jcvm

./: CHANGES  README.md  configure.in
doc/: jc.1.in
etc/: makedist.sh  regen.sh
include/: jc_arraydefs.h  jc_defs.h  jc_invoke.h  jc_machdep.h.in  jni.h  jni_machdep.h  queue.h
java/gnu/: Makefile.am
java/java/: Makefile.am
jc/: main.c
libjc/: array.c  bootstrap.c  c_support.c  cf_parse.c  cf_parse.h  cl_alloc.c  class_bytes.c  class_file.c  class_loader.c  class_object.c  debug_line.c  definitions.h  derive.c  derive2.c  elf.c  exception.c  fatal.c  gc_final.c  gc_root.c  gc_scan.c  heap.c  init.c  initialize.c  inline.h  instance.c  interp.c  invoke.c  jc_invoke.c  jni_invoke.c  jni_native.c  libjc.h  load.c  lock.c  misc.c  mutex.c  native_lib.c  native_ref.c  new.c  os_functions.c  prepare.c  (+18 more)
libjc/arch/: arch_definitions.h  arch_libjc.h  arch_structures.h
libjc/native/: gnu_classpath_VMStackWalker.c  gnu_classpath_VMSystemProperties.c  java_io_VMObjectStreamClass.c  java_lang_VMClass.c  java_lang_VMClassLoader.c  java_lang_VMCompiler.c  java_lang_VMObject.c  java_lang_VMRuntime.c  java_lang_VMSystem.c  java_lang_VMThread.c  java_lang_VMThrowable.c  java_lang_reflect_Constructor.c  java_lang_reflect_Field.c  java_lang_reflect_Method.c  org_dellroad_jc_JCFinder.c  org_dellroad_jc_cgen_SootCodeGenerator.c  org_dellroad_jc_vm_DebugThread.c  org_dellroad_jc_vm_FinalizerThread.c
soot/: Makefile.am  soot.patch
tools/cfdump/: cfdump.h  dep.c  deps.c  main.c  support.c
tools/jcjavah/: gen.c  javah.h  (+1 more)
website/: Makefile  index.php  jcvm.php  style.php
(+53 files in other folders)
