## $Id: Makefile.am,v 1.3 2005/01/09 02:06:56 archiecobbs Exp $

sootdir=	$(datadir)/jc

soot_DATA=	sootclasses-@SOOT_VERSION@.jar \
		jasminclasses-sable-@JASMIN_VERSION@.jar \
		polyglot-@POLYGLOT_VERSION@.jar

EXTRA_DIST=	sootclasses-@SOOT_VERSION@.jar \
		jasminclasses-sable-@JASMIN_VERSION@.jar \
		polyglot-@POLYGLOT_VERSION@.jar \
		soot.patch

